# hyperswitch-prism

./: .gitattributes  .gitignore  .nextest.toml  .typos.toml  CHANGELOG-SDK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FFI_GUIDE.md  FFI_LOGGING_VISIBILITY.md  FFI_TRACING_LOGS.md  Makefile  README.md  VERSIONING_OPTION1.md  VERSIONING_OPTION2.md  VERSIONING_POLICY.md  applepay_testing_slack.md  buf.yaml  connectors.json  context7.json  creds_dummy.json  final_cleanup.py  final_cleanup_v2.py  final_cleanup_v3.py  final_cleanup_v4.py  fix_all.py  fix_delimiters.py  fix_delimiters_final.py  fix_delimiters_final_v2.py  fix_delimiters_v2.py  fix_final_mismatches.py  fix_mismatches.py  fix_structural_v2.py  fix_syntax.py  fix_types.py  fix_types_final.py  fix_types_final_v2.py  fix_types_v10.py  fix_types_v11.py  fix_types_v12.py  (+37 more)
backend/ffi/: Cargo.toml
backend/ffi/src/: macros.rs
backend/ffi/src/bindings/: macros.rs  uniffi.rs  utils.rs
backend/ffi/src/handlers/: payments.rs
backend/ffi/src/services/: payments.rs
crates/common/common_enums/: Cargo.toml
crates/common/common_enums/src/: enums.rs  lib.rs  transformers.rs
crates/common/common_utils/: Cargo.toml
crates/common/common_utils/src/: config_patch.rs  connector_request_kafka.rs  consts.rs  crypto.rs  custom_serde.rs  event_publisher.rs  events.rs  ext_traits.rs  fp_utils.rs  lib.rs  lineage.rs  macros.rs  metadata.rs  request.rs  superposition_config.rs  types.rs
crates/common/connector_request_kafka/: Cargo.toml
crates/common/connector_request_kafka/src/: lib.rs
crates/common/external-services/: Cargo.toml
crates/common/external-services/src/: service.rs  shared_metrics.rs
crates/common/tracing-kafka/: Cargo.toml
crates/common/tracing-kafka/src/: lib.rs
crates/common/ucs_env/: Cargo.toml  build.rs
crates/common/ucs_env/src/: configs.rs  error.rs  lib.rs
crates/ffi/ffi/: Cargo.toml
crates/ffi/ffi/src/: bindings.rs  lib.rs  macros.rs  services.rs  types.rs  utils.rs
crates/grpc-server/grpc-server/: Cargo.toml
crates/grpc-server/grpc-server/src/: app.rs  config_overrides.rs  lib.rs  main.rs  request.rs  server.rs  utils.rs
crates/grpc-server/grpc-server/tests/: authorizedotnet_payment_flows_test.rs  cashtocode_payment_flows_test.rs  common.rs  fiuu_payment_flows_test.rs  helcim_payment_flows_test.rs  novalnet_payment_flows_test.rs  payload_payment_flows_test.rs  payout_flows_test.rs  paysafe_payment_flows_test.rs  stripe_payment_flows_test.rs  test_authorize_only.rs  test_config_override.rs  test_health.rs  xendit_payment_flows_test.rs
crates/integrations/connector-integration/: Cargo.toml
crates/integrations/connector-integration/src/: connectors.rs  default_implementations.rs  lib.rs  types.rs  utils.rs  webhook_utils.rs
crates/integrations/connector-integration/tests/: explicit_flow_status_guards.rs
crates/internal/composite-service/: Cargo.toml
crates/internal/composite-service/src/: composite_payments.rs  events.rs  lib.rs  payments.rs  transformers.rs  utils.rs
crates/internal/composite-service/tests/: composite_request_schema_check.rs
crates/internal/field-probe/: Cargo.toml  build.rs  patch-config.toml  probe-config.toml
crates/internal/field-probe/src/: auth.rs  config.rs  error_parsing.rs  flow_graph.rs  flow_metadata.rs  flow_registry.rs  json_utils.rs  main.rs  normalizer.rs  orchestrator.rs  patcher.rs  probe_engine.rs  registry.rs  requests.rs  sample_data.rs  status.rs  types.rs
crates/internal/ucs-connector-tests/: Cargo.toml  README.md  report.json
crates/internal/ucs-connector-tests/docs/: code-walkthrough.md  connector-overrides.md  scenario-json-core-readme.md
crates/internal/ucs-connector-tests/src/: lib.rs
crates/internal/ucs-connector-tests/test_report/: test_overview.md
crates/internal/uniffi-bindgen/: Cargo.toml
crates/types-traits/cards/: Cargo.toml
crates/types-traits/cards/src/: validate.rs
crates/types-traits/domain_types/: Cargo.toml
crates/types-traits/domain_types/src/: connector_flow.rs  connector_types.rs  errors.rs  lib.rs  mandates.rs  payment_address.rs  payment_method_data.rs  payouts.rs  router_data.rs  router_data_v2.rs  router_request_types.rs  router_response_types.rs  types.rs  utils.rs
crates/types-traits/grpc-api-types/: Cargo.toml  build.rs
crates/types-traits/grpc-api-types/proto/: composite_payment.proto  composite_services.proto  fraud.proto  health_check.proto  payment.proto  payment_methods.proto  (+3 more)
crates/types-traits/interfaces/: Cargo.toml
crates/types-traits/ucs_interface_common/: Cargo.toml
grace/: .env.example  .gitignore  README.md  analysis.md  enhacer.md   main.py  prompt1.md  pyproject.toml  setup.md
grace/config/: prompt_schema.json  prompts.yaml
grace/docs/: ENHANCED_FEATURES.md
grace/prompts/examples/: payment_processor_prompts.md
grace/rulesbook/codegen/: .gracerules  .gracerules_add_flow  .gracerules_add_payment_method  README.md  add_connector.sh
grace/rulesbook/pr-reviewer/: README.md
grace/src/: cli.py  config.py
grace/src/ai/: ai_service.py
grace/src/types/: config.py
grace/src/utils/: ai_utils.py  transformations.py  validations.py
grace/src/workflows/: __init__.py  integration_workflow.py
grace/workflow/: 1_orchestrator.md  2.1_links.md  2.2_techspec.md  2.3_codegen.md  2.4_pr.md  2.5_qa.md  2_connector.md  3_task_orchestrator.md  4_task_implementer.md  ORCHESTRATOR_TEMPLATE.md
grace/workflow/v2/: 1_master.md  2.1_flow_decider.md  2.2.1_testing.md  2.2_flow.md  2.3_pr.md  2_connector.md
sdk/grpc-ffi/: Cargo.toml
sdk/grpc-ffi/src/: lib.rs
sdk/python/: Makefile  README.md  pyproject.toml  setup.py
sdk/python/smoke-test/: test_smoke.py  test_smoke_composite.py  test_smoke_grpc.py  test_smoke_webhook.py
sdk/python/tests/: client_sanity_runner.py
sdk/rust/: Cargo.toml  Makefile  README.md
sdk/rust/examples/: basic.rs
sdk/rust/smoke-test/: Cargo.toml  build.rs
sdk/rust/src/: _generated_connector_client.rs  _generated_grpc_client.rs  connector_client.rs  error.rs  grpc_config.rs  grpc_utils.rs  http_client.rs  lib.rs
sdk/rust/tests/: cucumber.rs
(+4430 files in other folders)
