[workspace]
resolver = "2"
members = [
  "backend/grpc-api-types",
  "backend/connector-integration",
  "backend/external-services",
  "backend/grpc-server", 
  "backend/config_patch_derive",
  "sdk/rust-grpc-client",
  "backend/common_enums",
  "backend/common_utils",
  "backend/interfaces",
  "backend/domain_types",
  "backend/tracing-kafka",
  "backend/cards",
  "sdk/rust",
  "backend/composite-service",
  "backend/ucs_env",
  "backend/ucs_interface_common",
  "backend/ffi",
  "backend/uniffi-bindgen",
  "backend/field-probe",
  "backend/ucs-connector-tests"
]
exclude = [
  "examples/example-rs",
  "examples/example-tui",
  "examples/example-cli"
]


[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# UniFFI bindgen needs metadata symbols (UNIFFI_META_*) in the cdylib to generate
# Python/Kotlin bindings. Stripping removes them. Keep symbols for the ffi crate.
[profile.release.package.ffi]
strip = "none"

# Fast release profile for local SDK builds (make test-package).
# opt-level=1: basic optimisation (no vectorisation/heavy inlining) — ~3x faster
# codegen than opt-level=3 while still being runnable. The SDK smoke tests don't
# need production perf, just correctness.
# lto=false, codegen-units=16: skip LTO and parallelise codegen for max throughput.
# incremental: reuse codegen artefacts for unchanged crates across rebuilds.
# Use --release only for dist.
[profile.release-fast]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
incremental = true  # reuse codegen from unchanged crates on partial rebuilds

[profile.release-fast.package.ffi]
strip = "none"

[workspace.dependencies]
# Centralised versions — prevents duplicate compilation from version drift.
# Each crate opts in with: dep = { workspace = true }
#
# NOT listed here (incompatible versions in use across the workspace):
#   http        — 0.2.12 (ffi/domain_types) vs 1.3.1 (grpc-api-types/external-services)
#   error-stack — 0.4.1 (ffi/domain_types)  vs 0.5.0 (grpc-api-types) — both compiled today
tonic       = "0.13.1"
tonic-build = "0.13.0"
prost       = "0.13"
prost-build = "0.13.5"
serde       = { version = "1.0.219", features = ["derive"] }
serde_json  = "1.0.107"
thiserror   = "1"
tracing     = "0.1"
bytes       = "1"


[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 } # Remove priority once https://github.com/rust-lang/rust-clippy/pull/12827 is available in stable clippy
unused_qualifications = "warn"
# missing_debug_implementations = "warn"
# missing_docs = "warn"

[workspace.lints.clippy]
as_conversions = "warn"
expect_used = "warn"
index_refutable_slice = "warn"
indexing_slicing = "warn"
large_futures = "warn"
missing_panics_doc = "warn"
out_of_bounds_indexing = "warn"
panic = "warn"
panic_in_result_fn = "warn"
panicking_unwrap = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"

# Lints to allow
option_map_unit_fn = "allow"
