[workspace]
resolver = "2"
members = [
  "crates/types-traits/grpc-api-types",
  "crates/integrations/connector-integration",
  "crates/common/external-services",
  "crates/grpc-server/grpc-server",
  "crates/common/config_patch_derive",
  "sdk/rust-grpc-client",
  "crates/common/common_enums",
  "crates/common/common_utils",
  "crates/types-traits/interfaces",
  "crates/types-traits/domain_types",
  "crates/common/tracing-kafka",
  "crates/common/connector_request_kafka",
  "crates/types-traits/cards",
  "sdk/rust",
  "sdk/rust/smoke-test",
  "sdk/grpc-ffi",
  "crates/internal/composite-service",
  "crates/common/ucs_env",
  "crates/types-traits/ucs_interface_common",
  "crates/ffi/ffi",
  "crates/internal/uniffi-bindgen",
  "crates/internal/field-probe",
  "crates/internal/integration-tests"
]
exclude = [
  "examples/example-rs",
  "examples/example-tui",
  "examples/example-cli"
]


[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# UniFFI bindgen needs metadata symbols (UNIFFI_META_*) in the cdylib to generate
# Python/Kotlin bindings. Stripping removes them. Keep symbols for the ffi crate.
[profile.release.package.ffi]
strip = "none"

# Fast release profile for local SDK builds (make test-package).
# opt-level=1: basic optimisation (no vectorisation/heavy inlining) — ~3x faster
# codegen than opt-level=3 while still being runnable. The SDK smoke tests don't
# need production perf, just correctness.
# lto=false, codegen-units=16: skip LTO and parallelise codegen for max throughput.
# incremental: reuse codegen artefacts for unchanged crates across rebuilds.
# Use --release only for dist.
[profile.release-fast]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
incremental = true  # reuse codegen from unchanged crates on partial rebuilds

[profile.release-fast.package.ffi]
strip = "none"

[workspace.dependencies]
# Centralised versions — prevents duplicate compilation from version drift.
# Each crate opts in with: dep = { workspace = true }
#
# NOT listed here (incompatible versions in use across the workspace):
#   http        — 0.2.12 (ffi/domain_types) vs 1.3.1 (grpc-api-types/external-services)
#   error-stack — 0.4.1 (ffi/domain_types)  vs 0.5.0 (grpc-api-types) — both compiled today
tonic       = "0.14"
tonic-build = "0.14"
prost       = "0.14"
prost-build = "0.14"
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.107"
thiserror   = "1"
tracing     = "0.1"
bytes       = "1"
tonic-prost = "0.14"
superposition_core = { git = "https://github.com/juspay/superposition", branch = "main" }
uuid = "=1.20.0"
vergen = "=9.0.6"


[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 } # Remove priority once https://github.com/rust-lang/rust-clippy/pull/12827 is available in stable clippy
unused_qualifications = "warn"
# missing_debug_implementations = "warn"
# missing_docs = "warn"

[workspace.lints.clippy]
as_conversions = "warn"
expect_used = "warn"
index_refutable_slice = "warn"
indexing_slicing = "warn"
large_futures = "warn"
missing_panics_doc = "warn"
out_of_bounds_indexing = "warn"
panic = "warn"
panic_in_result_fn = "warn"
panicking_unwrap = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"

# Lints to allow
option_map_unit_fn = "allow"
