[package]
name = "hyperswitch-payments-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["hyperswitch", "prism", "payments", "payment-processing", "credit-cards", "juspay", "payment-gateway", "stripe", "adyen", "paypal", "unified-payments"]
description = "Hyperswitch Payments SDK — Rust client for connector integrations"

[lints.clippy]
needless_update = "allow"

[[example]]
name = "stripe"
path = "../../examples/stripe/stripe.rs"

[dependencies]
# Internal crates (path deps)
ffi = { path = "../../crates/ffi/ffi", features = ["uniffi"] }
grpc-api-types = { path = "../../crates/types-traits/grpc-api-types" }
external-services = { path = "../../crates/common/external-services", default-features = false }
ucs_env = { path = "../../crates/common/ucs_env" }
common_utils = { path = "../../crates/common/common_utils", package = "ucs_common_utils" }
domain_types = { path = "../../crates/types-traits/domain_types" }
cards = { path = "../../crates/types-traits/cards", package = "ucs_cards" }

# Third-party
tonic = { workspace = true }
base64 = "0.22"
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
http = "0.2.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = { workspace = true }
hyperswitch_masking = { version = "0.0.1", default-features = false, features = ["alloc", "serde", "time"] }
