[package]
name = "ucs_common_enums"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = { workspace = true }

[lints]
workspace = true
