[package]
name = "ucs_common_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
common_enums = { path = "../common_enums", package = "ucs_common_enums" }
superposition_core = { git = "https://github.com/juspay/superposition", branch = "main", optional = true }
superposition_types = { git = "https://github.com/juspay/superposition", branch = "main", optional = true }
config_patch_derive = { path = "../config_patch_derive" }
anyhow = "1.0"
rdkafka = { version = "0.36", optional = true }
tracing-kafka = { path = "../tracing-kafka", optional = true }
tracing = { workspace = true }
once_cell = "1.19"
chrono = "0.4.31"

hyperswitch_masking = { version = "0.0.1", default-features = false, features = ["alloc", "serde", "time"] }

error-stack = "0.4.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7.1"
thiserror = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["preserve_order", "preserve_path_order"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
rust_decimal = { version = "1.0" }
time = { version = "0.3.36", features = ["parsing", "macros"] }
url = "2.5.0"
uuid = { version = "1", features = ["v4", "v7"] }
http = "1.2.0"
reqwest = { version = "0.11.27", features = ["json", "rustls-tls", "gzip", "multipart"] }
multipart = { version = "0.18", features = ["client"] }
bytes = { workspace = true }
tonic = { workspace = true }
base64 = "0.21.2"
md5 = "0.7.0"
ring = { version = "0.17.14", features = ["std", "wasm32_unknown_unknown_js"] }
blake3 = { version = "1.8.2", features = ["serde"] }
hex = "0.4.3"
rand = "0.8.5"
nanoid = "0.4.0"
regex = "1.11.1"
semver = { version = "1.0.26", features = ["serde"] }
openssl = { version = "0.10", features = ["vendored"] }

# Optional features
[features]
default = []
kafka = ["dep:rdkafka", "dep:tracing-kafka"]
async_ext = ["dep:async-trait", "dep:futures"]
superposition = ["dep:superposition_core", "dep:superposition_types"]

[dependencies.async-trait]
version = "0.1.74"
optional = true

[dependencies.futures]
version = "0.3.28"
optional = true

[lints]
workspace=true
