[package]
name = "connector_request_kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
common_enums = { path = "../common_enums", package = "ucs_common_enums" }
common_utils = { path = "../common_utils", package = "ucs_common_utils" }
domain_types = { path = "../../types-traits/domain_types" }
error-stack = "0.4.1"
once_cell = "1.19.0"
rdkafka = "0.36"
serde_json = { workspace = true }
tracing = { workspace = true }
hyperswitch_masking = { version = "0.0.1", default-features = false, features = ["alloc", "serde", "time"] }

[lints]
workspace = true
