[package]
name = "external-services"
version = "0.1.0"
edition = "2021"

[dependencies]
error-stack = "0.4.1"
serde = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
config = "0.14.0"  
serde_derive = "1.0"
serde_yaml = "0.8"  
tokio = { version = "1.0", features = ["full"] }
toml = "0.5"
mime = "0.3.17"
serde_json = { workspace = true }
hex = "0.4.3"
ring = { version = "0.17.8", features = ["std"] }
strum = { version = "0.26.2", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "multipart"] }
base64 = "0.21.2"
bytes = { workspace = true }
http = "1.2.0"
# Domain types still expose `Option<http::HeaderMap>` from the 0.2 line, so we
# need both versions in scope to convert reqwest 0.12 (which re-exports http 1.x)
# back to the 0.2 type at the boundary.
http_02 = { package = "http", version = "0.2" }
lazy_static = "1.5.0"
once_cell = "1.19.0"
async-trait = "0.1"
tracing = { workspace = true }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", default-features = true, features = ["env-filter", "json", "registry"] }
tracing-attributes = "0.1.27"
tonic = { workspace = true }
prometheus = "0.13.4"
tower = "0.5.2"
hyper = "1.6.0"
http-body = "1.0.1"
domain_types = { path = "../../types-traits/domain_types"}
interfaces = { path = "../../types-traits/interfaces" }
common_utils = { path = "../common_utils", package = "ucs_common_utils", features = ["async_ext"] }
common_enums = { path = "../common_enums", package = "ucs_common_enums" }
hyperswitch_masking = { version = "0.0.1", default-features = false, features = ["alloc", "serde", "time"] }
# TODO! update to latest Hyperswitch Tag once hyperswitch_masking crate changes are merged to hyperswitch main
injector = { git = "https://github.com/juspay/hyperswitch", branch = "solve-injector-masking-cyclic-dependency", optional = true }
connector_request_kafka = { path = "../connector_request_kafka", optional = true }
url = "2.5.0"
chrono = "0.4.31"

[features]
# injector-client pulls in hyperswitch's injector crate (which transitively
# brings diesel via hyperswitch's common_enums). Only the gRPC server path that
# actually makes outbound HTTP calls to connectors needs this. The FFI build
# (connector_service_ffi.dylib) only uses response-processing helpers and must
# not compile injector to keep the binary lean and fast to link.
default = ["injector-client"]
injector-client = ["dep:injector"]
connector-request-kafka = ["dep:connector_request_kafka"]

[lints]
workspace=true