[package]
name = "ucs_env"
version = "0.1.0"
edition = "2021"


[dependencies]
# First-party dependencies
grpc-api-types = { path = "../../types-traits/grpc-api-types" }
connector-integration = { path = "../../integrations/connector-integration" }
external-services = { path = "../external-services", default-features = false }
domain_types = { path = "../../types-traits/domain_types" }
interfaces = { path = "../../types-traits/interfaces" }
cards = { path = "../../types-traits/cards", package = "ucs_cards" }
common_enums = { path = "../common_enums", package = "ucs_common_enums" }
common_utils = { path = "../common_utils", package = "ucs_common_utils", features = ["superposition"] }
config_patch_derive = { path = "../config_patch_derive" }
hyperswitch_masking = { version = "0.0.1", default-features = false, features = ["alloc", "serde", "time"] }
tracing-kafka = { path = "../tracing-kafka", optional = true }

# Third-party dependencies
config = "0.14.0"
error-stack = "0.4.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.16"
thiserror = { workspace = true }
time = { version = "0.3.36", features = ["parsing", "macros"] }
tracing = { workspace = true }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", default-features = true, features = [
    "env-filter",
    "json",
    "registry",
] }
tracing-attributes = "0.1.27"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tonic = { workspace = true }
tonic-reflection = "0.14.0"
http = "1.2.0"
log_utils = { git = "https://github.com/juspay/framework-libs-rs", rev = "243562041252fe5897ce888d20b715ffdc3767ce", package = "log_utils", features = [
    "tracing",
] }
build_info = { git = "https://github.com/juspay/framework-libs-rs", rev = "243562041252fe5897ce888d20b715ffdc3767ce", package = "build_info", features = [
    "cargo-workspace",
    "framework-libs-members-env",
] }

[build-dependencies]
build_info = { git = "https://github.com/juspay/framework-libs-rs", rev = "243562041252fe5897ce888d20b715ffdc3767ce", package = "build_info", features = [
    "cargo-workspace-build",
    "vergen-gix-build",
    "framework-libs-members-env",
] }

[features]
default = []
kafka = ["tracing-kafka"]

[lints]
workspace = true