[package]
name = "connector-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
domain_types = { path = "../../types-traits/domain_types" }
grpc-api-types = { path = "../../types-traits/grpc-api-types" }
base64 = "0.21"
common_enums = { path = "../../common/common_enums", package = "ucs_common_enums" }
common_utils = { path = "../../common/common_utils", package = "ucs_common_utils", features = ["superposition"] }
interfaces = { path = "../../types-traits/interfaces" }
hyperswitch_masking = { version = "0.0.1", default-features = false, features = ["alloc", "serde", "time"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_qs = "0.12.0"
serde_urlencoded = "0.7.1"
serde_with = "3.7.0"
uuid = { version = "1", features = ["v4"] }
error-stack = "0.4.0"
strum = { version = "0.26", features = ["derive"] }
time = "0.3.35"
url = "2.5.0"
urlencoding = "2.1.3"
cards = { path = "../../types-traits/cards", package = "ucs_cards" }
paste = "1.0"
reqwest = { version = "0.11.27", features = [
    "json",
    "rustls-tls",
    "gzip",
    "multipart",
] }
bytes = { workspace = true }
ring = "0.17"
aes = "0.8"
cbc = "0.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
tracing = { workspace = true }
encoding_rs = "0.8"
hex = "0.4.3"
qrcode = "0.14.1"
image = { version = "0.25.6", default-features = false, features = ["png"] }
thiserror = { workspace = true }
sha2 = "0.10"
rand = "0.8"
jsonwebtoken = "10.3"
html-escape = "0.2"
josekit = "0.8.7"
async-trait = "0.1.88"
openssl = {version = "0.10.70"}

[lints]
workspace = true
