[package]
name = "ucs-connector-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
grpc-server = { path = "../../grpc-server/grpc-server" }
grpc-api-types = { path = "../../types-traits/grpc-api-types" }
ucs_env = { path = "../../common/ucs_env" }
connector_service_ffi = { package = "ffi", path = "../../ffi/ffi" }

tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
http = "1.2.0"
tower = "0.5.2"
tokio-stream = { version = "0.1.17", features = ["net"] }
tempfile = "3.19.1"
hyper-util = { version = "0.1.3", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
prost = "0.14"
serde = { workspace = true }
serde_json = "1.0"
thiserror = "1.0"
proptest = "1.9.0"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
serde_ignored = "0.1"

[lints]
workspace = true