[package]
name = "uniffi-bindgen"
version = "0.1.0"
edition = "2021"
# Minimal crate whose only job is to expose the uniffi-bindgen CLI.
# Keeping it separate from the `ffi` library means the `uniffi/cli` feature
# (and its large template/codegen deps) is never compiled when building the dylib.

[[bin]]
name = "uniffi-bindgen"

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
