[package]
name = "ucs_cards"
description = "Types to handle card masking and validation"
version = "0.1.0"
edition = "2021"

[dependencies]
error-stack = "0.4.1"
serde = { workspace = true }
thiserror = { workspace = true }
time = "0.3.41"
regex = "1.11.1"
bytes = { workspace = true }
prost = { workspace = true }

# First party crates
hyperswitch_masking = { version = "0.0.1", default-features = false, features = ["alloc", "serde", "time"] }
common_utils = { path = "../../common/common_utils", package = "ucs_common_utils" }


[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true