[package]
name = "grpc-api-types"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
prost-types = "0.13"
tonic = { workspace = true }
tonic-prost = { workspace = true }
axum = "0.8.3"
http = "1.3.1"
serde = { workspace = true }

error-stack = "0.5.0"

# First-party dependencies
cards = { path = "../cards", package = "ucs_cards" }
hyperswitch_masking = { version = "0.0.1", default-features = false, features = [ "proto_tonic","alloc", "serde", "time"] }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
prost = { workspace = true }
heck = "0.5.0"
g2h = { git = "https://github.com/juspay/g2h", rev = "399d5257744cabffe88d9871a1192eacbbe9f484" }
