[package]
name = "ucs_interface_common"
version = "0.1.0"
edition = "2021"

[dependencies]
# First-party dependencies
grpc-api-types = { path = "../grpc-api-types" }
common_enums = { path = "../../common/common_enums", package = "ucs_common_enums" }
common_utils = { path = "../../common/common_utils", package = "ucs_common_utils" }
domain_types = { path = "../domain_types" }
ucs_env = { path = "../../common/ucs_env" }
hyperswitch_masking = { version = "0.0.1", default-features = false, features = ["alloc", "serde", "time"] }

# Third-party dependencies
base64 = "0.21.2"
error-stack = "0.4.1"
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
http = "1.2.0"
thiserror = { workspace = true }

[lints]
workspace = true
